crates/hwledger-user-story-macros/tests/trybuild/yaml_syntax_error.stderr
error: [user_story_test] YAML parse error at line 5 col 1: found unexpected end of stream at line 5 column 1, while scanning a quoted scalar at line 3 column 8
 --> tests/trybuild/yaml_syntax_error.rs:3:1
  |
3 | / #[user_story_test(yaml = r#"
4 | | journey_id: ok-id
5 | | title: "unterminated
6 | | persona: x
7 | | "#)]
  | |____^
  |
  = note: this error originates in the attribute macro `user_story_test` (in Nightly builds, run with -Z macro-backtrace for more info)
